force-app/main/default/objects/Case_Associate__c/Case_Associate__c.object-meta.xml
<CustomObject>
    <label>Case Association</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Case Associate No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>