force-app/main/default/objects/Case_Associate__c/fields/Associate_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Associate_Entity_Type__c</fullName>
    <label>Associate Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>