force-app/main/default/objects/Case_Associate__c/fields/Associate_Type__c.field-meta.xml
<CustomField>
    <fullName>Associate_Type__c</fullName>
    <label>Associate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>