force-app/main/default/objects/Case_Associate__c/fields/Claims__c.field-meta.xml
<CustomField>
    <fullName>Claims__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claims</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Case_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>