force-app/main/default/objects/Case_Associate__c/fields/Entity1__c.field-meta.xml
<CustomField>
    <fullName>Entity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Entity_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Entity_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Case_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>