force-app/main/default/objects/Case_Associate__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Case_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>