force-app/main/default/objects/Case_Associate__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Case Associate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>