force-app/main/default/objects/Case_Associate__c/recordTypes/Billing_Provider.recordType-meta.xml
<RecordType>
    <fullName>Billing_Provider</fullName>
    <active>true</active>
    <label>Billing Provider</label>
</RecordType>