force-app/main/default/objects/Case_Associate__c/recordTypes/Claims.recordType-meta.xml
<RecordType>
    <fullName>Claims</fullName>
    <active>false</active>
    <label>Claims</label>
</RecordType>