force-app/main/default/objects/Case_Associate__c/recordTypes/Member.recordType-meta.xml
<RecordType>
    <fullName>Member</fullName>
    <active>false</active>
    <label>Member</label>
</RecordType>