force-app/main/default/objects/Case_Associate__c/recordTypes/Provider.recordType-meta.xml
<RecordType>
    <fullName>Provider</fullName>
    <active>true</active>
    <label>Provider</label>
</RecordType>