force-app/main/default/objects/Case_Associate__c/recordTypes/Rendering_Provider.recordType-meta.xml
<RecordType>
    <fullName>Rendering_Provider</fullName>
    <active>true</active>
    <label>Rendering Provider</label>
</RecordType>